Add banner image and example body work for html file, add css header and nav customization

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,3 +1,13 @@
-.header {
-    background-color: blue;
-}
+
+header {
+    padding: 60px;
+    text-align: left;
+    background: #2b3d4e;
+    color: #fff;
+  }
+
+  nav {
+    text-align: right;
+  }
+  
+  
