--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,14 +5,29 @@ header {
     background: #0b4479;
     color: #fff;
   }
+header nav {
+  margin-right: 75px;
+  text-align: right;
+  font-size: 22px;
+ }
 
-nav {
-    text-align: right;
+header nav ul {
+   list-style-type: none;
+}
+
+header nav ul li {
+   display: inline-block;
+   margin-left: 25px
   }
-  
+
+main {
+  display: flex;
+}
+
 aside {
     flex: 30%;
     background-color: #19262c;
+    color: #fff;
     padding: 20px;
     flex-wrap: wrap;
   }
@@ -23,3 +38,25 @@ section {
     padding: 20px;
   }
   
+footer {
+  padding: 20px;
+  text-align: center;
+  background: #13293d;
+  color: #fff;
+} 
+
+footer nav {
+  padding: 20px;
+  margin-right: 20px;
+  float: center;
+  font-size: 20px;
+  }
+  
+  footer nav ul {
+   list-style-type: none;
+  }
+  
+  footer nav ul li {
+   display: inline-block;
+    margin-left: 25px
+    }
