--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,12 +4,12 @@ header {
     text-align: left;
     background: #0b4479;
     color: #fff;
-  }
+}
 header nav {
   margin-right: 75px;
   text-align: right;
   font-size: 22px;
- }
+}
 
 header nav ul {
    list-style-type: none;
@@ -40,8 +40,8 @@ section {
   
 footer {
   padding: 20px;
-  text-align: center;
-  background: #13293d;
+  text-align: Left;
+  background: #19262c;
   color: #fff;
 } 
 
